[package]
name = "inwx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iso8601 = "0.4.0"
url = "2.2.2"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["blocking", "cookies", "rustls-tls"]

[dependencies.xmlrpc]
version = "0.15.1"
default-features = false
features = ["http"]
